Add missing reality tabs skin.js script load

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -6,6 +6,7 @@
     <script src="keycode.js"></script>
     <script src="svg-boundings.js"></script>
     <script src="sprite3d.js"></script>
+    <script src="skin.js"></script>
     <script src="xrmp.js"></script>
     <script src="xrmp-three.js"></script>
     <script>
