Add missing reality tabs player skin mesh update support

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -789,7 +789,10 @@ const _openServer = (serverUrl, host) => {
   xrmp.onplayerenter = playerMesh => {
     const skinMesh = _makeSkinMesh();
     skinMesh.setSkinUrl(DEFAULT_SKIN_URL);
-    playerMesh.skinMesh = skinMesh;
+
+    playerMesh.onupdate = () => {
+      skinMesh.update(playerMesh.hmd, playerMesh.gamepads);
+    };
 
     scene.add(playerMesh);
   };
