--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -110,8 +110,9 @@ const localVector = new THREE.Vector3();
 const localVector2 = new THREE.Vector3();
 const localVector3 = new THREE.Vector3();
 const localQuaternion = new THREE.Quaternion();
-const localEuler = new THREE.Euler();
-localEuler.order = 'YXZ';
+const localQuaternion2 = new THREE.Quaternion();
+const localEuler = new THREE.Euler(0, 0, 0, 'YXZ');
+const localEuler2 = new THREE.Euler(0, 0, 0, 'YXZ');
 const localMatrix = new THREE.Matrix4();
 
 function parseQuery(queryString) {
