--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2597,13 +2597,13 @@ function animate(time, frame) {
   _updateRig();
 
   const _updateMp = () => {
-    /* const vrCamera = renderer.vr.enabled ? renderer.vr.getCamera(camera) : camera;
-    vrCamera.matrixWorld.decompose(vrCamera.position, vrCamera.quaternion, vrCamera.scale);
+    /* const vrCamera = renderer.vr.enabled ? renderer.vr.getCamera(camera).cameras[0] : camera;
+    vrCamera.matrixWorld.decompose(localVector, localQuaternion, localVector2);
     localSkinMesh.update(vrCamera, controllerMeshes); */
 
     if (serverConnectedUrl) {
-      xrmp.localPlayerMesh.hmd.position.copy(camera.position);
-      xrmp.localPlayerMesh.hmd.quaternion.copy(camera.quaternion);
+      const vrCamera = renderer.vr.enabled ? renderer.vr.getCamera(camera).cameras[0] : camera;
+      vrCamera.matrixWorld.decompose(xrmp.localPlayerMesh.hmd.position, xrmp.localPlayerMesh.hmd.quaternion, localVector2);
 
       for (let i = 0; i < 2; i++) {
         const controllerMesh = controllerMeshes[i];
