--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -190,32 +190,34 @@ const _requestSpriteMesh = url => new Promise((accept, reject) => {
 });
 
 const _makeBoxGeometry = () => {
-  const lineGeometry = new THREE.CylinderBufferGeometry(0.001, 0.001, 0.1, 3, 1);
+  const size = 1;
+
+  const lineGeometry = new THREE.CylinderBufferGeometry(0.001, 0.001, size, 3, 1);
   const geometry = new THREE.BufferGeometry();
   const positions = new Float32Array(lineGeometry.attributes.position.array.length * 12);
   geometry.addAttribute('position', new THREE.BufferAttribute(positions, 3));
   // axis
   positions.set(
     lineGeometry.clone().applyMatrix(
-      localMatrix.makeTranslation(-0.1/2, 0, -0.1/2)
+      localMatrix.makeTranslation(-size/2, 0, -size/2)
     ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 0
   );
   positions.set(
     lineGeometry.clone().applyMatrix(
-      localMatrix.makeTranslation(0.1/2, 0, -0.1/2)
+      localMatrix.makeTranslation(size/2, 0, -size/2)
     ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 1
   );
   positions.set(
     lineGeometry.clone().applyMatrix(
-      localMatrix.makeTranslation(-0.1/2, 0, 0.1/2)
+      localMatrix.makeTranslation(-size/2, 0, size/2)
     ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 2
   );
   positions.set(
     lineGeometry.clone().applyMatrix(
-      localMatrix.makeTranslation(0.1/2, 0, 0.1/2)
+      localMatrix.makeTranslation(size/2, 0, size/2)
     ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 3
   );
@@ -226,7 +228,7 @@ const _makeBoxGeometry = () => {
         localMatrix.makeRotationFromQuaternion(localQuaternion.setFromAxisAngle(localVector.set(0, 0, 1), Math.PI/2))
       )
       .applyMatrix(
-        localMatrix.makeTranslation(0, -0.1/2, -0.1/2)
+        localMatrix.makeTranslation(0, -size/2, -size/2)
       ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 4
   );
@@ -236,7 +238,7 @@ const _makeBoxGeometry = () => {
         localMatrix.makeRotationFromQuaternion(localQuaternion.setFromAxisAngle(localVector.set(0, 0, 1), Math.PI/2))
       )
       .applyMatrix(
-        localMatrix.makeTranslation(0, -0.1/2, 0.1/2)
+        localMatrix.makeTranslation(0, -size/2, size/2)
       ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 5
   );
@@ -246,7 +248,7 @@ const _makeBoxGeometry = () => {
         localMatrix.makeRotationFromQuaternion(localQuaternion.setFromAxisAngle(localVector.set(0, 0, 1), Math.PI/2))
       )
       .applyMatrix(
-        localMatrix.makeTranslation(0, 0.1/2, -0.1/2)
+        localMatrix.makeTranslation(0, size/2, -size/2)
       ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 6
   );
@@ -256,7 +258,7 @@ const _makeBoxGeometry = () => {
         localMatrix.makeRotationFromQuaternion(localQuaternion.setFromAxisAngle(localVector.set(0, 0, 1), Math.PI/2))
       )
       .applyMatrix(
-        localMatrix.makeTranslation(0, 0.1/2, 0.1/2)
+        localMatrix.makeTranslation(0, size/2, size/2)
       ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 7
   );
@@ -267,7 +269,7 @@ const _makeBoxGeometry = () => {
         localMatrix.makeRotationFromQuaternion(localQuaternion.setFromAxisAngle(localVector.set(1, 0, 0), Math.PI/2))
       )
       .applyMatrix(
-        localMatrix.makeTranslation(-0.1/2, -0.1/2, 0)
+        localMatrix.makeTranslation(-size/2, -size/2, 0)
       ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 8
   );
@@ -277,7 +279,7 @@ const _makeBoxGeometry = () => {
         localMatrix.makeRotationFromQuaternion(localQuaternion.setFromAxisAngle(localVector.set(1, 0, 0), Math.PI/2))
       )
       .applyMatrix(
-        localMatrix.makeTranslation(-0.1/2, 0.1/2, 0)
+        localMatrix.makeTranslation(-size/2, size/2, 0)
       ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 9
   );
@@ -297,7 +299,7 @@ const _makeBoxGeometry = () => {
         localMatrix.makeRotationFromQuaternion(localQuaternion.setFromAxisAngle(localVector.set(1, 0, 0), Math.PI/2))
       )
       .applyMatrix(
-        localMatrix.makeTranslation(0.1/2, 0.1/2, 0)
+        localMatrix.makeTranslation(size/2, size/2, 0)
       ).attributes.position.array,
     lineGeometry.attributes.position.array.length * 11
   );
