--- a/examples/tutorial.html
+++ b/examples/tutorial.html
@@ -17,8 +17,7 @@
     const localVector2 = new THREE.Vector3();
     const localVector3 = new THREE.Vector3();
     const localQuaternion = new THREE.Quaternion();
-    const localEuler = new THREE.Euler();
-    localEuler.order = 'YXZ';
+    const localEuler = new THREE.Euler(0, 0, 0, 'YXZ');
     const localMatrix = new THREE.Matrix4();
 
     const FLOOR_SIZE = 20;
