--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -7,7 +7,7 @@
     <script src="svg-boundings.js"></script>
     <script src="sprite3d.js"></script>
     <script>
-let display, fakeDisplay, tabs = [], lastPresseds = [false, false], lastAxes = [[0.5, 0.5], [0.5, 0.5]], lastAxesTouched = [false, false], scrollFactors = [0, 0], scaleFactors = [1, 1];
+let display, fakeDisplay, tabs = [], lastPresseds = [false, false], lastAxes = [[0.5, 0.5], [0.5, 0.5]], lastPadToucheds = [false, false], scrollFactors = [0, 0], scaleFactors = [1, 1];
 
 const links = [
   {
@@ -2010,7 +2010,7 @@ function animate(time, frame) {
 
       const padTouched = gamepad.buttons[0].touched;
       const {axes} = gamepad;
-      const lastPadTouched = lastPadTouched[i];
+      const lastPadTouched = lastPadToucheds[i];
       if (padTouched && lastPadTouched && !moves[i]) {
         const lastAxis = lastAxes[i];
         const dx = axes[0] - lastAxis[0];
