More reality tabs typo debugging

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2035,8 +2035,8 @@ function animate(time, frame) {
         }
       }
 
-      lastAxis[0] = axes[0];
-      lastAxis[1] = axes[1];
+      lastAxes[0] = axes[0];
+      lastAxes[1] = axes[1];
     }
   };
   _updateIntersections();
