--- a/examples/meshing_ml.html
+++ b/examples/meshing_ml.html
@@ -9,7 +9,7 @@
   <body>
   <script src="three.js"></script>
   <script>
-    let container, scene, camera, display, model, controllerMeshes;
+    let container, scene, camera, display, model;
     let mesher = null;
 
     const localVector = new THREE.Vector3();
@@ -17,23 +17,6 @@
     const localEuler = new THREE.Euler();
     const localMatrix = new THREE.Matrix4();
     const localFloat32Array = new Float32Array(16);
-
-    const controllerGeometry = new THREE.BoxBufferGeometry(0.1, 0.2, 0.01);
-    const controllerMaterial = new THREE.MeshPhongMaterial({
-      color: 0x4caf50,
-    });
-    const _makeControllerMesh = (x = 0, y = 0, z = 0, qx = 0, qy = 0, qz = 0, qw = 1) => {
-      const mesh = new THREE.Mesh(controllerGeometry, controllerMaterial);
-      mesh.position.set(x, y, z);
-      mesh.quaternion.set(qx, qy, qz, qw);
-      // mesh.matrix.compose(mesh.position, mesh.quaternion, mesh.scale);
-      mesh.updateMatrix();
-      mesh.updateMatrixWorld();
-      mesh.matrixAutoUpdate = false;
-      mesh.frustumCulled = false;
-      return mesh;
-    };
-    const _getControllerIndex = inputSource => inputSource.handedness === 'left' ? 0 : 1;
 
     const numCubes = 100;
     const cubeSize = 0.2;
@@ -59,14 +42,6 @@
       const directionalLight = new THREE.DirectionalLight(0xFFFFFF, 1);
       directionalLight.position.set(1, 1, 1);
       scene.add(directionalLight);
-
-      controllerMeshes = [
-        _makeControllerMesh(-0.1),
-        _makeControllerMesh(0.1),
-      ];
-      controllerMeshes.forEach(controllerMesh => {
-        scene.add(controllerMesh);
-      });
 
       renderer = new THREE.WebGLRenderer({
         antialias: true,
@@ -276,23 +251,6 @@
         );
         model.updateMatrixWorld();
       }
-      if (renderer.vr.enabled) {
-        for (let i = 0; i < controllerMeshes.length; i++) {
-          controllerMeshes[i].visible = false;
-        }
-
-        const inputSources = display.session.getInputSources();
-        for (let i = 0; i < inputSources.length; i++) {
-          const inputSource = inputSources[i];
-          const pose = frame.getInputPose(inputSource);
-
-          const controllerIndex = _getControllerIndex(inputSource);
-          const controllerMesh = controllerMeshes[controllerIndex];
-          controllerMesh.matrix.fromArray(pose.targetRay.transformMatrix);
-          controllerMesh.updateMatrixWorld(true);
-          controllerMesh.visible = true;
-        }
-      }
 
       renderer.render(scene, renderer.vr.enabled ? renderer.vr.getCamera(camera) : camera);
     }
@@ -307,18 +265,6 @@
         exclusive: true,
       });
       display.session = session;
-
-      session.onselect = e => {
-        const controllerIndex = e.inputSource.handedness === 'left' ? 0 : 1;
-        const controllerMesh = controllerMeshes[controllerIndex];
-        controllerMesh.matrixWorld.decompose(controllerMesh.position, controllerMesh.quaternion, controllerMesh.scale);
-
-        const objectMesh = _makeControllerMesh(
-          controllerMesh.position.x, controllerMesh.position.y, controllerMesh.position.z,
-          controllerMesh.quaternion.x, controllerMesh.quaternion.y, controllerMesh.quaternion.z, controllerMesh.quaternion.w,
-        );
-        scene.add(objectMesh);
-      };
 
       // console.log('request first frame');
       session.requestAnimationFrame((timestamp, frame) => {
