--- a/examples/meshing_ml.html
+++ b/examples/meshing_ml.html
@@ -84,7 +84,7 @@
           }
 
           void main() {
-            gl_FragColor = vec4(1.0, 1.0, 1.0, (1.0-edgeFactor())*0.95);
+            gl_FragColor = vec4(0.984313725490196, 0.5490196078431373, 0, 0.2 + (1.0 - edgeFactor()) * 0.8);
           }
         `,
         polygonOffset: true,
