--- a/examples/meshing_ml.html
+++ b/examples/meshing_ml.html
@@ -59,18 +59,16 @@
       const terrainMaterial = new THREE.ShaderMaterial({
         uniforms: {},
         vertexShader: `\
-          attribute vec3 barycentric;
           varying vec3 vBC;
           void main() {
-            vBC = barycentric;
-            /* float m = mod(gl_VertexID, 3.0);
+            float m = mod(gl_VertexID, 3.0);
             if (m < 0.5) {
-              vUv = vec2(0.0, 0.0);
+              vBC = vec3(1.0, 0.0, 0.0);
             } else if (m < 1.5) {
-              vUv = vec2(1.0, 1.0);
+              vBC = vec3(0.0, 1.0, 0.0);
             } else {
-              vUv = vec2(1.0, 0.0);
-            } */
+              vBC = vec3(0.0, 0.0, 1.0);
+            }
             gl_Position = projectionMatrix * modelViewMatrix * vec4(position, 1.0);
           }
         `,
@@ -122,7 +120,6 @@
 
         const positions = new Float32Array(count*3);
         const normals = new Float32Array(count*3);
-        const barycentrics = new Float32Array(count*3);
         for (let i = 0; i < count; i += 3) {
           const ai = indexArray[i];
           const bi = indexArray[i+1];
@@ -152,20 +149,9 @@
           normals[baseIndex+6] = normalArray[baseC];
           normals[baseIndex+7] = normalArray[baseC+1];
           normals[baseIndex+8] = normalArray[baseC+2];
-
-          barycentrics[baseIndex] = 1;
-          barycentrics[baseIndex+1] = 0;
-          barycentrics[baseIndex+2] = 0;
-          barycentrics[baseIndex+3] = 0;
-          barycentrics[baseIndex+4] = 1;
-          barycentrics[baseIndex+5] = 0;
-          barycentrics[baseIndex+6] = 0;
-          barycentrics[baseIndex+7] = 0;
-          barycentrics[baseIndex+8] = 1;
         }
         geometry.addAttribute('position', new THREE.BufferAttribute(positions, 3));
         geometry.addAttribute('normal', new THREE.BufferAttribute(normals, 3));
-        geometry.addAttribute('barycentric', new THREE.BufferAttribute(barycentrics, 3));
       };
       const _removeTerrainMesh = terrainMesh => {
         scene.remove(terrainMesh);
