--- a/examples/meshing_ml.html
+++ b/examples/meshing_ml.html
@@ -82,7 +82,7 @@
           }
 
           void main() {
-            gl_FragColor = vec4(vec3(0.984313725490196, 0.5490196078431373, 0.0) * (0.5 + (1.0 - edgeFactor()) * 0.5), 1.0 - gl_FragCoord.z/gl_FragCoord.w/3.0);
+            gl_FragColor = vec4(vec3(0.984313725490196, 0.5490196078431373, 0.0) * (0.2 + (1.0 - edgeFactor()) * 0.8), 1.0) * (1.0 - gl_FragCoord.z/gl_FragCoord.w/3.0);
           }
         `,
         polygonOffset: true,
