--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2024,13 +2024,13 @@ function animate(time, frame) {
       if (padPressed && moves[i]) {
         if (padPressed) {
           if (gamepad.axes[1] > 0.5) {
-            scrollFactors[i] += 1/30;
+            scrollFactors[i] += 1/20;
           } else if (gamepad.axes[1] < -0.5) {
-            scrollFactors[i] -= 1/30;
+            scrollFactors[i] -= 1/20;
           } else if (gamepad.axes[0] > 0.5) {
-            scaleFactors[i] = Math.min(scaleFactors[i] + 1/30, 100);
+            scaleFactors[i] = Math.min(scaleFactors[i] *= 1.01, 100);
           } else if (gamepad.axes[0] < -0.5) {
-            scaleFactors[i] = Math.max(scaleFactors[i] - 1/30, 0.01);
+            scaleFactors[i] = Math.max(scaleFactors[i] /= 1.01, 0.01);
           }
         }
       }
