Comment out party menu dot meshes usage

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2340,9 +2340,9 @@ function animate(time, frame) {
                         controllerMesh.rayMesh.scale.z = distance;
                         controllerMesh.updateMatrixWorld();
 
-                        controllerMesh.dotMesh.position.z = -distance;
+                        /* controllerMesh.dotMesh.position.z = -distance;
                         controllerMesh.updateMatrixWorld();
-                        controllerMesh.dotMesh.visible = true;
+                        controllerMesh.dotMesh.visible = true; */
 
                         const gamepads = navigator.getGamepads();
                         const gamepad = gamepads[i];
@@ -2369,9 +2369,9 @@ function animate(time, frame) {
                         controllerMesh.rayMesh.scale.z = distance;
                         controllerMesh.updateMatrixWorld();
 
-                        controllerMesh.dotMesh.position.z = -distance;
+                        /* controllerMesh.dotMesh.position.z = -distance;
                         controllerMesh.updateMatrixWorld();
-                        controllerMesh.dotMesh.visible = true;
+                        controllerMesh.dotMesh.visible = true; */
 
                         const gamepads = navigator.getGamepads();
                         const gamepad = gamepads[i];
