Bugfix reality tabs example object meshes lookup

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -1852,7 +1852,9 @@ function animate(time, frame) {
       boxMesh.visible = true;
 
       if (serverConnectedUrl) {
-        const object = xrmp.objects.find(object => object.id === moveTab.id);
+        const objectMesh = xrmp.getObjectMeshes()
+          .find(objectMesh => objectMesh.object.id === moveTab.id);
+        const {object} = objectMesh;
         const {objectMatrix} = object;
         localVector.toArray(objectMatrix.position);
         localQuaternion.toArray(objectMatrix.quaternion);
