--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -87,7 +87,7 @@ let serversLoading = false;
 let serverConnectedUrl = null;
 
 const DEFAULT_URL = 'http://lol.com';
-const REGISTRY_URL = 'http://18.209.88.19:9001';
+const REGISTRY_URL = 'http://xrmp.webmr.io:9001';
 const DEFAULT_SKIN_URL = 'skin2.png';
 const RAY_COLOR = 0x44c2ff;
 const RAY_HIGHLIGHT_COLOR = new THREE.Color(RAY_COLOR).multiplyScalar(0.5).getHex();
