Add depth population example to reality tabs links list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -75,6 +75,10 @@ const links = [
     url: 'imagetracking_ml.html',
   },
   {
+    name: 'Depth population',
+    url: 'depth.html',
+  },
+  {
     name: 'Microphone',
     url: 'microphone.html',
   },
