--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2262,10 +2262,10 @@ if (navigator.xr && !query.fake) {
         renderer.vr.setDevice(display);
         renderer.vr.setAnimationLoop(animate);
 
-        if (window.browser && window.browser.magicleap) {
+        /* if (window.browser && window.browser.magicleap) {
           window.browser.magicleap.RequestDepthPopulation(true);
           renderer.autoClearDepth = false;
-        }
+        } */
 
         _openUrl('tutorial.html');
         _updateRigLists();
