Bugfix reality tabs example last pad touched tracking

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2018,7 +2018,7 @@ function animate(time, frame) {
 
         rig.menuMesh.listMesh.updateWheel(dx*4, dy*4);
       }
-      lastPadTouched[i] = padTouched;
+      lastPadToucheds[i] = padTouched;
 
       const padPressed = gamepad.buttons[0].pressed;
       if (padPressed && moves[i]) {
