Open reality tabs menu rig with only y axis rotation

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -2092,6 +2092,10 @@ function animate(time, frame) {
 
           if (bumper && !lastBumper) {
             const {position, quaternion} = _getFrontOfCamera();
+            localEuler.setFromQuaternion(quaternion, localEuler.order);
+            localEuler.x = 0;
+            localEuler.z = 0;
+            quaternion.setFromEuler(localEuler);
             _openRig(position, quaternion);
           }
 
